--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="containerize-column">
+        <!-- <div class="containerize-column">
             <div class="containerize-row">
                 <div class="appetizers">
                     <h1>Cheese sticks</h1>
@@ -36,7 +36,7 @@
                     <p>Fruits are better</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </body>
 </html>
